--- a/app/templates/admin/change_password.html
+++ b/app/templates/admin/change_password.html
@@ -15,19 +15,20 @@
                     <div class="box-header with-border">
                         <h3 class="box-title">修改密码</h3>
                     </div>
-                    <form role="form">
+                    <form role="form" method="POST">
                         <div class="box-body">
                             <div class="form-group">
                                 <label for="input_pwd">旧密码</label>
-                                <input type="password" class="form-control" id="input_pwd" placeholder="请输入旧密码！">
+                                {{ form.old_password }}
                             </div>
                             <div class="form-group">
                                 <label for="input_newpwd">新密码</label>
-                                <input type="password" class="form-control" id="input_newpwd" placeholder="请输入新密码！">
+                                {{ form.new_password }}
                             </div>
                         </div>
                         <div class="box-footer">
-                            <button type="submit" class="btn btn-primary">修改</button>
+                            {{ form.submit }}
+                            {{ form.csrf_token }}
                         </div>
                     </form>
                 </div>
