--- a/app/templates/admin/tag_list.html
+++ b/app/templates/admin/tag_list.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html' %}
 
-{% import 'ui/admin_page.html' as page %}
+{% import 'ui/page.html' as page %}
 
 {% block content %}
     <section class="content-header">
