--- a/app/templates/admin/admin_add.html
+++ b/app/templates/admin/admin_add.html
@@ -15,31 +15,32 @@
                     <div class="box-header with-border">
                         <h3 class="box-title">添加管理员</h3>
                     </div>
-                    <form role="form">
+                    <form role="form" method="POST">
                         <div class="box-body">
                             <div class="form-group">
-                                <label for="input_name">管理员名称</label>
-                                <input type="text" class="form-control" id="input_name" placeholder="请输入管理员名称！">
+                                <label for="input_name">{{ form.email.label }}</label>
+                                {{ form.email }}
                             </div>
                             <div class="form-group">
-                                <label for="input_pwd">管理员密码</label>
-                                <input type="password" class="form-control" id="input_pwd" placeholder="请输入管理员密码！">
+                                <label for="input_name">{{ form.name.label }}</label>
+                                {{ form.name }}
                             </div>
                             <div class="form-group">
-                                <label for="input_re_pwd">管理员重复密码</label>
-                                <input type="password" class="form-control" id="input_re_pwd"
-                                       placeholder="请输入管理员重复密码！">
+                                <label for="input_pwd">{{ form.password.label }}</label>
+                                {{ form.password }}
                             </div>
                             <div class="form-group">
-                                <label for="input_role_id">所属角色</label>
-                                <select class="form-control" id="input_role_id">
-                                    <option value="0">---请选择所属角色---</option>
-                                    <option value="1">xxx</option>
-                                </select>
+                                <label for="input_re_pwd">{{ form.repassword.label }}</label>
+                                {{ form.repassword }}
+                            </div>
+                            <div class="form-group">
+                                <label for="input_role_id">{{ form.role_id.label }}</label>
+                                {{ form.role_id }}
                             </div>
                         </div>
                         <div class="box-footer">
-                            <button type="submit" class="btn btn-primary">添加</button>
+                            {{ form.submit }}
+                            {{ form.csrf_token }}
                         </div>
                     </form>
                 </div>
