--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -54,8 +54,8 @@
                                 <img src="{{ url_for('static', filename='admin/dist/img/user2-160x160.jpg') }}"
                                      class="img-circle" alt="User Image">
                                 <p>
-                                    xxx
-                                    <small>2017-06-01</small>
+                                    {{ current_user.name }}
+                                    <small>{{ online_time }}</small>
                                 </p>
                             </li>
                             <li class="user-footer">
@@ -80,7 +80,7 @@
                          alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p>用户xxx</p>
+                    <p>{{ current_user.name }}</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                 </div>
             </div>
@@ -99,12 +99,16 @@
     </aside>
     <div class="content-wrapper">
         <div class="row">
-            {% with messages = get_flashed_messages() %}
-                {% for message in messages %}
-                    {% if message %}
-                        <div class="alert alert-success" role="alert">{{ message }}</div>
-                    {% endif %}
-                {% endfor %}
+            {% with messages = get_flashed_messages(with_categories=true, category_filter=["message","error"]) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        {% if category == 'message' %}
+                            <div class="alert alert-success" role="alert">{{ message }}</div>
+                        {% else %}
+                            <div class="alert alert-error" role="alert">{{ message }}</div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             {% endwith %}
             {% if form and form.errors %}
                 {% for key, error in form.errors.items() %}
