--- a/app/templates/admin/movie_add.html
+++ b/app/templates/admin/movie_add.html
@@ -82,7 +82,7 @@
             flashplayer: "{{ url_for('static', filename='jwplayer/jwplayer.flash.swf') }}",
             playlist: [{
                 file: "{{ url_for('static', filename='video/htpy.mp4') }}",
-                title: "环太平洋"
+                title: "{{ movie.title }}"
             }],
             modes: [{
                 type: "html5"
