--- a/app/templates/admin/movie_edit.html
+++ b/app/templates/admin/movie_edit.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="input_logo">{{ form.logo.label }}</label>
-                                {{ form.logo(value=movie.logo) }}
+                                {{ form.logo }}
                                 <img src="{{ url_for('static', filename='uploads/' + movie.logo) }}" style="margin-top:5px;" class="img-responsive"
                                      alt="">
                             </div>
