--- a/app/templates/admin/permission_edit.html
+++ b/app/templates/admin/permission_edit.html
@@ -4,8 +4,8 @@
     <section class="content-header">
         <h1>微电影管理系统</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> 角色管理</a></li>
-            <li class="active">添加角色</li>
+            <li><a href="#"><i class="fa fa-dashboard"></i> 权限管理</a></li>
+            <li class="active">编辑权限</li>
         </ol>
     </section>
     <section class="content" id="showcontent">
@@ -13,19 +13,17 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header with-border">
-                        <h3 class="box-title">添加角色</h3>
+                        <h3 class="box-title">编辑权限</h3>
                     </div>
                     <form role="form" method="POST">
                         <div class="box-body">
                             <div class="form-group">
                                 <label for="input_name">{{ form.name.label }}</label>
-                                {{ form.name }}
+                                {{ form.name(value=permission.name) }}
                             </div>
-                            <div class="form-group" id="auth_list">
-                                <div class="col-md-12">
-                                    <label>{{ form.permissions.label }}</label>
-                                </div>
-                                {{ form.permissions }}
+                            <div class="form-group">
+                                <label for="input_url">{{ form.url.label }}</label>
+                                {{ form.url(value=permission.url) }}
                             </div>
                         </div>
                         <div class="box-footer">
@@ -41,8 +39,8 @@
 {% block js %}
     <script>
     $(document).ready(function(){
-        $("#g-10").addClass("active");
-        $("#g-10-1").addClass("active");
+        $("#g-9").addClass("active");
+        $("#g-9-1").addClass("active");
     });
     </script>
 {% endblock %}
