--- a/app/templates/admin/preview_edit.html
+++ b/app/templates/admin/preview_edit.html
@@ -4,8 +4,8 @@
     <section class="content-header">
         <h1>微电影管理系统</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> 角色管理</a></li>
-            <li class="active">添加角色</li>
+            <li><a href="#"><i class="fa fa-dashboard"></i> 预告管理</a></li>
+            <li class="active">修改预告</li>
         </ol>
     </section>
     <section class="content" id="showcontent">
@@ -13,19 +13,19 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header with-border">
-                        <h3 class="box-title">添加角色</h3>
+                        <h3 class="box-title">修改预告</h3>
                     </div>
-                    <form role="form" method="POST">
+                    <form method="POST" role="form" enctype="multipart/form-data">
                         <div class="box-body">
                             <div class="form-group">
-                                <label for="input_name">{{ form.name.label }}</label>
-                                {{ form.name }}
+                                <label for="input_title">{{ form.title.label }}</label>
+                                {{ form.title(value=preview.title) }}
                             </div>
-                            <div class="form-group" id="auth_list">
-                                <div class="col-md-12">
-                                    <label>{{ form.permissions.label }}</label>
-                                </div>
-                                {{ form.permissions }}
+                            <div class="form-group">
+                                <label for="input_logo">{{ form.logo.label }}</label>
+                                {{ form.logo }}
+                                <img src="{{ url_for('static', filename='uploads/' + preview.logo) }}"
+                                     class="img-responsive center-block" alt="">
                             </div>
                         </div>
                         <div class="box-footer">
@@ -40,9 +40,9 @@
 {% endblock %}
 {% block js %}
     <script>
-    $(document).ready(function(){
-        $("#g-10").addClass("active");
-        $("#g-10-1").addClass("active");
-    });
+        $(document).ready(function () {
+            $("#g-4").addClass("active");
+            $("#g-4-1").addClass("active");
+        });
     </script>
 {% endblock %}
