--- a/app/templates/admin/preview_list.html
+++ b/app/templates/admin/preview_list.html
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html' %}
 
+{% import 'ui/page.html' as page %}
+
 {% block content %}
     <section class="content-header">
         <h1>微电影管理系统</h1>
@@ -36,32 +38,27 @@
                                 <th>添加时间</th>
                                 <th>操作事项</th>
                             </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>环太平洋</td>
-                                <td>
-                                    <img data-src="holder.js/140x64" class="img-responsive center-block" alt="">
-                                </td>
-                                <td>2017-06-01</td>
-                                <td>
-                                    <a class="label label-success">编辑</a>
-                                    &nbsp;
-                                    <a class="label label-danger">删除</a>
-                                </td>
-                            </tr>
+                            {% for preview in page_data.items %}
+                                <tr>
+                                    <td>{{ preview.id }}</td>
+                                    <td>{{ preview.title }}</td>
+                                    <td>
+                                        <img src="{{ url_for('static', filename='uploads/' + preview.logo) }}"
+                                             style="width: 140px" class="img-responsive center-block" alt="">
+                                    </td>
+                                    <td>{{ preview.create_time }}</td>
+                                    <td>
+                                        <a href="{{ url_for('admin.preview_edit', preview_id=preview.id) }}" class="label label-success">编辑</a>
+                                        &nbsp;
+                                        <a href="{{ url_for('admin.preview_del', preview_id=preview.id) }}" class="label label-danger">删除</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        <ul class="pagination pagination-sm no-margin pull-right">
-                            <li><a href="#">首页</a></li>
-                            <li><a href="#">上一页</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">下一页</a></li>
-                            <li><a href="#">尾页</a></li>
-                        </ul>
+                        {{ page.page(page_data, 'admin.preview_list') }}
                     </div>
                 </div>
             </div>
@@ -70,9 +67,9 @@
 {% endblock %}
 {% block js %}
     <script>
-    $(document).ready(function(){
-        $("#g-4").addClass("active");
-        $("#g-4-2").addClass("active");
-    });
+        $(document).ready(function () {
+            $("#g-4").addClass("active");
+            $("#g-4-2").addClass("active");
+        });
     </script>
 {% endblock %}
