--- a/app/templates/admin/role_edit.html
+++ b/app/templates/admin/role_edit.html
@@ -5,7 +5,7 @@
         <h1>微电影管理系统</h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> 角色管理</a></li>
-            <li class="active">添加角色</li>
+            <li class="active">修改角色</li>
         </ol>
     </section>
     <section class="content" id="showcontent">
@@ -13,19 +13,19 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header with-border">
-                        <h3 class="box-title">添加角色</h3>
+                        <h3 class="box-title">修改角色</h3>
                     </div>
                     <form role="form" method="POST">
                         <div class="box-body">
                             <div class="form-group">
                                 <label for="input_name">{{ form.name.label }}</label>
-                                {{ form.name }}
+                                {{ form.name(value=role.name) }}
                             </div>
                             <div class="form-group" id="auth_list">
                                 <div class="col-md-12">
                                     <label>{{ form.permissions.label }}</label>
                                 </div>
-                                {{ form.permissions }}
+                                {{ form.permissions(value=role.permissions) }}
                             </div>
                         </div>
                         <div class="box-footer">
