--- a/app/templates/admin/role_list.html
+++ b/app/templates/admin/role_list.html
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html' %}
 
+{% import 'ui/page.html' as page %}
+
 {% block content %}
     <section class="content-header">
         <h1>微电影管理系统</h1>
@@ -35,29 +37,23 @@
                                 <th>添加时间</th>
                                 <th>操作事项</th>
                             </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>xxx</td>
-                                <td>2017-06-01</td>
+                            {% for role in page_data.items %}
+                                <tr>
+                                <td>{{ role.id }}</td>
+                                <td>{{ role.name }}</td>
+                                <td>{{ role.create_time }}</td>
                                 <td>
-                                    <a class="label label-success">编辑</a>
+                                    <a href="{{ url_for('admin.role_edit', role_id=role.id) }}" class="label label-success">编辑</a>
                                     &nbsp;
-                                    <a class="label label-danger">删除</a>
+                                    <a href="{{ url_for('admin.role_del', role_id=role.id) }}" class="label label-danger">删除</a>
                                 </td>
                             </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        <ul class="pagination pagination-sm no-margin pull-right">
-                            <li><a href="#">首页</a></li>
-                            <li><a href="#">上一页</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">下一页</a></li>
-                            <li><a href="#">尾页</a></li>
-                        </ul>
+                        {{ page.page(page_data, 'admin.role_list') }}
                     </div>
                 </div>
             </div>
