--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html' %}
 
+{% import 'ui/page.html' as page %}
+
 {% block content %}
     <section class="content-header">
         <h1>微电影管理系统</h1>
@@ -39,39 +41,42 @@
                                 <th>注册时间</th>
                                 <th>操作事项</th>
                             </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>拓荒者</td>
-                                <td>1780316635@qq.com</td>
-                                <td>13700632835</td>
-                                <td>
-                                    <img data-src="holder.js/50x50" class="img-responsive center-block" alt="">
-                                </td>
-                                <td>正常/冻结</td>
-                                <td>2017-06-01 12:00:00</td>
-                                <td>
-                                    <a class="label label-success" href="user_view.html">查看</a>
-                                    &nbsp;
-                                    <a class="label label-info">解冻</a>
-                                    &nbsp;
-                                    <a class="label label-warning">冻结</a>
-                                    &nbsp;
-                                    <a class="label label-danger">删除</a>
-                                </td>
-                            </tr>
+                            {% for user in page_data.items %}
+                                <tr>
+                                    <td>{{ user.id }}</td>
+                                    <td>{{ user.name }}</td>
+                                    <td>{{ user.email }}</td>
+                                    <td>{{ user.phone }}</td>
+                                    <td>
+                                        {% if user.avatar %}
+                                            <img src="{{ url_for('static', filename='uploads/users/' + user.avatar) }}"
+                                                 style="width: 50px" class="img-responsive center-block" alt="">
+                                        {% else %}
+                                            <img data-src="holder.js/50x50"
+                                                 style="width: 50px" class="img-responsive center-block" alt="">
+                                        {% endif %}
+                                    </td>
+                                    <td>正常/冻结</td>
+                                    <td>{{ user.create_time }}</td>
+                                    <td>
+                                        <a class="label label-success"
+                                           href="{{ url_for('admin.user_view', uid=user.id) }}">查看</a>
+                                        &nbsp;
+                                        <a class="label label-info">解冻</a>
+                                        &nbsp;
+                                        <a class="label label-warning">冻结</a>
+                                        &nbsp;
+                                        <a class="label label-danger"
+                                           href="{{ url_for('admin.user_del', uid=user.id) }}">删除</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+
                             </tbody>
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        <ul class="pagination pagination-sm no-margin pull-right">
-                            <li><a href="#">首页</a></li>
-                            <li><a href="#">上一页</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">下一页</a></li>
-                            <li><a href="#">尾页</a></li>
-                        </ul>
+                        {{ page.page(page_data, 'admin.user_list') }}
                     </div>
                 </div>
             </div>
@@ -80,9 +85,9 @@
 {% endblock %}
 {% block js %}
     <script>
-    $(document).ready(function(){
-        $("#g-5").addClass("active");
-        $("#g-5-1").addClass("active");
-    });
+        $(document).ready(function () {
+            $("#g-5").addClass("active");
+            $("#g-5-1").addClass("active");
+        });
     </script>
 {% endblock %}
