--- a/app/templates/admin/user_login_log_list.html
+++ b/app/templates/admin/user_login_log_list.html
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html' %}
 
+{% import 'ui/page.html' as page %}
+
 {% block content %}
     <section class="content-header">
         <h1>微电影管理系统</h1>
@@ -35,25 +37,20 @@
                                 <th>登录时间</th>
                                 <th>登录IP</th>
                             </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>张小明</td>
-                                <td>2017-06-01</td>
-                                <td>192.168.4.1</td>
-                            </tr>
+                            {% for log in page_data.items %}
+                                <tr>
+                                    <td>{{ log.id }}</td>
+                                    <td>{{ log.name }}</td>
+                                    <td>{{ log.create_time }}</td>
+                                    <td>{{ log.ip }}</td>
+                                </tr>
+                            {% endfor %}
+
                             </tbody>
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        <ul class="pagination pagination-sm no-margin pull-right">
-                            <li><a href="#">首页</a></li>
-                            <li><a href="#">上一页</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">下一页</a></li>
-                            <li><a href="#">尾页</a></li>
-                        </ul>
+                        {{ page.page(page_data, 'admin.user_login_log_list') }}
                     </div>
                 </div>
             </div>
@@ -62,9 +59,9 @@
 {% endblock %}
 {% block js %}
     <script>
-    $(document).ready(function(){
-        $("#g-8").addClass("active");
-        $("#g-8-3").addClass("active");
-    });
+        $(document).ready(function () {
+            $("#g-8").addClass("active");
+            $("#g-8-3").addClass("active");
+        });
     </script>
 {% endblock %}
