--- a/app/templates/home/base.html
+++ b/app/templates/home/base.html
@@ -15,15 +15,16 @@
         .navbar-brand > img {
             display: inline;
         }
+
         .media {
             padding: 3px;
             border: 1px solid #ccc
         }
     </style>
     {% block css %}
-    <style>
+        <style>
 
-    </style>
+        </style>
     {% endblock %}
 </head>
 
@@ -38,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{{ url_for('home.index') }}" class="navbar-brand" style="width:250px;">
+            <a href="{{ url_for('home.index', page=1) }}" class="navbar-brand" style="width:250px;">
                 <img src="{{ url_for('static', filename='base/images/logo.png') }}" style="height:30px;">&nbsp;微电影
             </a>
         </div>
@@ -47,15 +48,16 @@
         <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-left" role="search" style="margin-top:18px;">
                 <div class="form-group input-group">
-                    <input type="text" class="form-control" placeholder="请输入电影名！">
+                    <input type="text" class="form-control" placeholder="请输入电影名！" id="key_movie">
                     <span class="input-group-btn">
-                        <a class="btn btn-default" href="{{ url_for('home.search') }}"><span class="glyphicon glyphicon-search"></span>&nbsp;搜索</a>
+                        <a class="btn btn-default" id="search_movie"><span
+                                class="glyphicon glyphicon-search"></span>&nbsp;搜索</a>
                     </span>
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="curlink" href="{{ url_for('home.index') }}"><span class="glyphicon glyphicon-film"></span>&nbsp;电影</a>
+                    <a class="curlink" href="{{ url_for('home.index', page=1) }}"><span class="glyphicon glyphicon-film"></span>&nbsp;电影</a>
                 </li>
                 <li>
                     <a class="curlink" href="{{ url_for('home.login') }}"><span
@@ -70,7 +72,11 @@
                             class="glyphicon glyphicon-log-out"></span>&nbsp;退出</a>
                 </li>
                 <li>
-                    <a class="curlink" href="{{ url_for('home.user') }}"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
+                    {% if current_user.is_authenticated %}
+                        <a class="curlink" href="{{ url_for('home.user_info', uid=current_user.id) }}"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
+                    {% else %}
+                        <a class="curlink" href="{{ url_for('home.login') }}"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
@@ -81,6 +87,24 @@
 <!--导航-->
 <!--内容-->
 <div class="container" style="margin-top:76px">
+    <div class="row">
+        {% with messages = get_flashed_messages(with_categories=true, category_filter=["message","error"]) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    {% if category == 'message' %}
+                        <div class="alert alert-success" role="alert">{{ message }}</div>
+                    {% else %}
+                        <div class="alert alert-error" role="alert">{{ message }}</div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        {% if form and form.errors %}
+            {% for key, error in form.errors.items() %}
+                <div class="alert alert-warning" role="alert">{{ error }}</div>
+            {% endfor %}
+        {% endif %}
+    </div>
     {% block content %}
 
     {% endblock %}
@@ -117,6 +141,10 @@
             effect: "fadeIn"
         });
     });
+    $("#search_movie").click(function () {
+        var key = $("#key_movie").val();
+        location.href = "{{ url_for('home.search', page=1) }}?key=" + key;
+    })
 
 </script>
 {% block js %}
