--- a/app/templates/home/change_password.html
+++ b/app/templates/home/change_password.html
@@ -19,21 +19,20 @@
                 <h3 class="panel-title"><span class="glyphicon glyphicon-map-marker"></span>&nbsp;会员中心</h3>
             </div>
             <div class="panel-body">
-                <form role="form">
+                <form role="form" method="POST">
                     <fieldset>
                         <div class="form-group">
-                            <label for="input_oldpwd"><span class="glyphicon glyphicon-lock"></span>&nbsp;旧密码</label>
-                            <input id="input_oldpwd" class="form-control" placeholder="旧密码" name="oldpwd"
-                                   type="password" autofocus>
+                            <label for="input_oldpwd"><span class="glyphicon glyphicon-lock"></span>&nbsp;{{ form.old_password.label }}</label>
+                            {{ form.old_password }}
                         </div>
                         <div class="col-md-12" id="error_oldpwd"></div>
                         <div class="form-group">
-                            <label for="input_newpwd"><span class="glyphicon glyphicon-lock"></span>&nbsp;新密码</label>
-                            <input id="input_newpwd" class="form-control" placeholder="新密码" name="newpwd"
-                                   type="password" autofocus>
+                            <label for="input_newpwd"><span class="glyphicon glyphicon-lock"></span>&nbsp;{{ form.new_password.label }}</label>
+                            {{ form.new_password }}
                         </div>
                         <div class="col-md-12" id="error_newpwd"></div>
-                        <a href="login.html" class="btn btn-success"><span class="glyphicon glyphicon-edit"></span>&nbsp;修改密码</a>
+                        {{ form.submit }}
+                        {{ form.csrf_token }}
                     </fieldset>
                 </form>
             </div>
