--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -60,10 +60,10 @@
                             </li>
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="{{ url_for('admin.change_password') }}" class="btn btn-default btn-flat">修改密码</a>
+                                    <a href="{{ url_for('auth.change_password') }}" class="btn btn-default btn-flat">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="{{ url_for('admin.logout') }}" class="btn btn-default btn-flat">退出系统</a>
+                                    <a href="{{ url_for('auth.logout') }}" class="btn btn-default btn-flat">退出系统</a>
                                 </div>
                             </li>
                         </ul>
