--- a/app/templates/ui/page.html
+++ b/app/templates/ui/page.html
@@ -8,10 +8,12 @@
                 <li class="disabled"><a href="#">上一页</a></li>
             {% endif %}
             {% for v in data.iter_pages() %}
-                {% if v == data.page %}
-                    <li class="active"><a href="#">{{ v }}</a></li>
-                {% else %}
-                    <li><a href="{{ url_for(url, page=v) }}">{{ v }}</a></li>
+                {% if v %}
+                    {% if v == data.page %}
+                        <li class="active"><a href="#">{{ v }}</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for(url, page=v) }}">{{ v }}</a></li>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
             {% if data.has_next %}
