--- a/app/templates/ui/page_search.html
+++ b/app/templates/ui/page_search.html
@@ -9,10 +9,12 @@
                     <li class="disabled"><a href="#">上一页</a></li>
                 {% endif %}
                 {% for v in data.iter_pages() %}
-                    {% if v == data.page %}
-                        <li class="active"><a href="#">{{ v }}</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for(url, page=v) }}?key={{ data.key }}">{{ v }}</a></li>
+                    {% if v %}
+                        {% if v == data.page %}
+                            <li class="active"><a href="#">{{ v }}</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for(url, page=v) }}?key={{ data.key }}">{{ v }}</a></li>
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
                 {% if data.has_next %}
