--- a/app/templates/admin/admin_add.html
+++ b/app/templates/admin/admin_add.html
@@ -34,8 +34,8 @@
                                 {{ form.repassword }}
                             </div>
                             <div class="form-group">
-                                <label for="input_role_id">{{ form.role_id.label }}</label>
-                                {{ form.role_id }}
+                                <label for="input_role_id">{{ form.role.label }}</label>
+                                {{ form.role }}
                             </div>
                         </div>
                         <div class="box-footer">
@@ -51,8 +51,8 @@
 {% block js %}
     <script>
     $(document).ready(function(){
-        $("#g-9").addClass("active");
-        $("#g-9-1").addClass("active");
+        $("#g-8").addClass("active");
+        $("#g-8-1").addClass("active");
     });
     </script>
 {% endblock %}
