--- a/app/templates/admin/admin_list.html
+++ b/app/templates/admin/admin_list.html
@@ -52,7 +52,7 @@
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        {{ page.page(page_data, 'admin.admin_list') }}
+                        {{ page.page(page_data, 'auth.admin_list') }}
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
 {% block js %}
     <script>
     $(document).ready(function(){
-        $("#g-9").addClass("active");
-        $("#g-9-2").addClass("active");
+        $("#g-8").addClass("active");
+        $("#g-8-2").addClass("active");
     });
     </script>
 {% endblock %}
