--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -60,14 +60,14 @@
                                     <td>{{ user.create_time }}</td>
                                     <td>
                                         <a class="label label-success"
-                                           href="{{ url_for('admin.user_view', uid=user.id) }}">查看</a>
+                                           href="{{ url_for('auth.user_view', uid=user.id) }}">查看</a>
                                         &nbsp;
                                         <a class="label label-info">解冻</a>
                                         &nbsp;
                                         <a class="label label-warning">冻结</a>
                                         &nbsp;
                                         <a class="label label-danger"
-                                           href="{{ url_for('admin.user_del', uid=user.id) }}">删除</a>
+                                           href="{{ url_for('auth.user_del', uid=user.id) }}">删除</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -76,7 +76,7 @@
                         </table>
                     </div>
                     <div class="box-footer clearfix">
-                        {{ page.page(page_data, 'admin.user_list') }}
+                        {{ page.page(page_data, 'auth.user_list') }}
                     </div>
                 </div>
             </div>
