--- a/app/templates/home/menu.html
+++ b/app/templates/home/menu.html
@@ -3,7 +3,7 @@
         <a id='m-1' href="{{ url_for('home.user_info', uid=current_user.id) }}" class="list-group-item">
             <span class="glyphicon glyphicon-user"></span>&nbsp;会员中心
         </a>
-        <a id="m-2" href="{{ url_for('home.change_password') }}" class="list-group-item">
+        <a id="m-2" href="{{ url_for('auth.change_password') }}" class="list-group-item">
             <span class="glyphicon glyphicon-lock"></span>&nbsp;修改密码
         </a>
         <a id='m-3' href="{{ url_for('home.comment_list', page=1) }}" class="list-group-item">
