--- a/app/templates/admin/movie_edit.html
+++ b/app/templates/admin/movie_edit.html
@@ -35,7 +35,7 @@
                             <div class="form-group">
                                 <label for="input_logo">{{ form.logo.label }}</label>
                                 {{ form.logo }}
-                                <img src="{{ url_for('static', filename='uploads/' + movie.logo) }}" style="margin-top:5px;" class="img-responsive"
+                                <img src="{{ url_for('static', filename='uploads/' + config['MOVIE_DIR'] + '/'  + movie.logo) }}" style="margin-top:5px;" class="img-responsive"
                                      alt="">
                             </div>
                             <div class="form-group">
@@ -81,7 +81,7 @@
         jwplayer("moviecontainer").setup({
             flashplayer: "{{ url_for('static', filename='jwplayer/jwplayer.flash.swf') }}",
             playlist: [{
-                file: "{{ url_for('static', filename='uploads/' + movie.url) }}",
+                file: "{{ url_for('static', filename='uploads/' + config['MOVIE_DIR'] + '/'  + movie.url) }}",
                 title: "{{ movie.title }}"
             }],
             modes: [{
