--- a/app/templates/admin/user_view.html
+++ b/app/templates/admin/user_view.html
@@ -38,7 +38,7 @@
                                 <td class="td_bd">头像：</td>
                                 <td>
                                     {% if user.avatar %}
-                                        <img src="{{ url_for('static', filename='uploads/users/' + user.avatar) }}"
+                                        <img src="{{ url_for('static', filename='uploads/'+ config['AVATAR_DIR'] + '/'  + user.avatar) }}"
                                              style="width: 50px" class="img-responsive center-block" alt="">
                                     {% else %}
                                         <img data-src="holder.js/50x50"
