--- a/app/templates/errors/admin_403.html
+++ b/app/templates/errors/admin_403.html
@@ -11,7 +11,7 @@
     <img class="rotating" src="{{ url_for('static', filename='404/spaceman.svg') }}">
     <div class="pagenotfound-text">
         <h1>无访问权限！</h1>
-        <h2><a href="{{ url_for('admin.index', page=1) }}">返回首页</a></h2>
+        <h2><a href="{{ url_for('admin.index') }}">返回首页</a></h2>
     </div>
     <canvas id="canvas2d"></canvas>
 </div>
