--- a/app/templates/home/movie_col_list.html
+++ b/app/templates/home/movie_col_list.html
@@ -26,7 +26,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="{{ url_for('home.play', movie_id=movie_col.movie.id, page=1) }}">
-                                    <img class="media-object" style="width:131px;height:83px;" src="{{ url_for('static', filename='uploads/' + movie_col.movie.logo) }}" alt="{{ movie_col.movie.title }}">
+                                    <img class="media-object" style="width:131px;height:83px;" src="{{ url_for('static', filename='uploads/' + config['MOVIE_DIR'] + '/'  + movie_col.movie.logo) }}" alt="{{ movie_col.movie.title }}">
                                 </a>
                             </div>
                             <div class="media-body">
