--- a/app/templates/home/nav.html
+++ b/app/templates/home/nav.html
@@ -54,20 +54,26 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="curlink" href="index.html"><span class="glyphicon glyphicon-film"></span>&nbsp;电影</a>
+                    <a class="curlink" href="{{ url_for('home.index') }}"><span class="glyphicon glyphicon-film"></span>&nbsp;电影</a>
                 </li>
                 <li>
-                    <a class="curlink" href="../auth/login.html"><span class="glyphicon glyphicon-log-in"></span>&nbsp;登录</a>
+                    <a class="curlink" href="{{ url_for('auth.register') }}"><span class="glyphicon glyphicon-plus"></span>&nbsp;注册</a>
                 </li>
-                <li>
-                    <a class="curlink" href="../auth/register.html"><span class="glyphicon glyphicon-plus"></span>&nbsp;注册</a>
-                </li>
-                <li>
-                    <a class="curlink" href="logout.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;退出</a>
-                </li>
-                <li>
-                    <a class="curlink" href="user_info.html"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
-                </li>
+                {% if current_user.is_authenticated %}
+                    <li>
+                        <a class="curlink" href="{{ url_for('auth.logout') }}"><span
+                                class="glyphicon glyphicon-log-out"></span>&nbsp;退出</a>
+                    </li>
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.user_info', uid=current_user.id) }}"><span
+                                class="glyphicon glyphicon-user"></span>&nbsp;{{ current_user.name }}</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a class="curlink" href="{{ url_for('auth.login') }}"><span
+                                class="glyphicon glyphicon-log-in"></span>&nbsp;登录</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
         <!--导航-->
