--- a/app/templates/home/user_info.html
+++ b/app/templates/home/user_info.html
@@ -45,7 +45,7 @@
                                     class="glyphicon glyphicon-picture"></span>&nbsp;{{ form.avatar.label }}</label>
                             {{ form.avatar(value=user.avatar) }}
                             {% if user.avatar %}
-                                <img src="{{ url_for('static', filename='uploads/' + user.avatar) }}"
+                                <img src="{{ url_for('static', filename='uploads/'+ config['AVATAR_DIR'] + '/'  + user.avatar) }}"
                                      class="img-responsive img-rounded">
                             {% endif %}
                         </div>
