--- a/app/static/base/css/bootstrap-theme.css
+++ b/app/static/base/css/bootstrap-theme.css
@@ -435,7 +435,8 @@ fieldset[disabled] .btn-danger.active {
   background-image:         linear-gradient(to bottom, #fcf8e3 0%, #f8efc0 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffcf8e3', endColorstr='#fff8efc0', GradientType=0);
   background-repeat: repeat-x;
-  border-color: #f5e79e;
+  /*border-color: #f5e79e;*/
+  border-color: red;
 }
 .alert-danger {
   background-image: -webkit-linear-gradient(top, #f2dede 0%, #e7c3c3 100%);
