--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -105,7 +105,7 @@
                         {% if category == 'message' %}
                             <div class="alert alert-success" role="alert">{{ message }}</div>
                         {% else %}
-                            <div class="alert alert-error" role="alert">{{ message }}</div>
+                            <div class="alert alert-warning" role="alert">{{ message }}</div>
                         {% endif %}
                     {% endfor %}
                 {% endif %}
