--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -49,7 +49,7 @@
                                     <td>{{ user.phone }}</td>
                                     <td>
                                         {% if user.avatar %}
-                                            <img src="{{ url_for('static', filename='uploads/users/'+ config['AVATAR_DIR'] + '/'  + user.avatar) }}"
+                                            <img src="{{ url_for('static', filename='uploads/'+ config['AVATAR_DIR'] + '/'  + user.avatar) }}"
                                                  style="width: 50px" class="img-responsive center-block" alt="">
                                         {% else %}
                                             <img data-src="holder.js/50x50"
